# action-cargo-deny

./: Cargo.toml  README.md  action.yml  deny.toml
.github/workflows/: publish.yml
src/: cli.rs  github.rs  lib.rs  log.rs  main.rs
src/parse/: diagnostic.rs  log.rs  mod.rs  summary.rs
