[package]
name = "action-cargo-deny"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
description = "Run cargo-deny and transform the output to annotations for GitHub Actions"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.1", features = ["derive"] }
percent-encoding = "2.1.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
strum = { version = "0.23.0", features = ["derive"] }
which = "4.2.2"

[profile.release]
lto = true
