[package]
name = "action-cargo-deny"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
description = "Run cargo-deny and transform the output to annotations for GitHub Actions"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.4", features = ["derive"] }
percent-encoding = "2.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
strum = { version = "0.24.1", features = ["derive"] }
which = "4.2.5"

[profile.release]
lto = true
