[package]
name = "action-cargo-deny"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
description = "Run cargo-deny and transform the output to annotations for GitHub Actions"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["derive"] }
percent-encoding = "2.2.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
strum = { version = "0.24.1", features = ["derive"] }
which = "4.3.0"

[profile.release]
lto = true
